<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".accountAdmin.fragment.SignUpFragment">

        <TextView
            android:id="@+id/signUp_tv_RePasswrod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tv_passwordCheckLabel"
            app:layout_constraintEnd_toEndOf="@+id/signUp_tv_password"
            app:layout_constraintTop_toBottomOf="@+id/signUp_tv_password" />

        <TextView
            android:id="@+id/signUp_tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_signupLabel"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.158" />

        <Button
            android:id="@+id/signUp_bt_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="56dp"
            android:text="@string/bt_signup"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/signUp_et_confirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/signUp_et_confirmPassword" />

        <EditText
            android:id="@+id/signUp_et_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toEndOf="@+id/signUp_tv_tel"
            app:layout_constraintTop_toBottomOf="@+id/signUp_tv_signUp" />

        <EditText
            android:id="@+id/signUp_et_passwrod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signUp_et_tel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signUp_et_tel"
            app:layout_constraintTop_toBottomOf="@+id/signUp_et_tel" />

        <EditText
            android:id="@+id/signUp_et_confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signUp_et_passwrod"
            app:layout_constraintStart_toStartOf="@+id/signUp_et_passwrod"
            app:layout_constraintTop_toBottomOf="@+id/signUp_et_passwrod" />

        <TextView
            android:id="@+id/signUp_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_passwordLabel"
            app:layout_constraintEnd_toEndOf="@+id/signUp_tv_tel"
            app:layout_constraintTop_toBottomOf="@+id/signUp_tv_tel" />

        <TextView
            android:id="@+id/signUp_tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="40dp"
            android:text="@string/tv_phoneNumberLabel"
            app:layout_constraintEnd_toStartOf="@+id/signUp_tv_signUp"
            app:layout_constraintTop_toBottomOf="@+id/signUp_tv_signUp" />

        <TextView
            android:id="@+id/signUp_tv_alarmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/signUp_bt_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.633"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_et_confirmPassword"
            app:layout_constraintVertical_bias="0.351" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

